// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VenueFavorite (default) should match snapshot 1`] = `
<button
  className="c-icon-button qa-toggle-favorite"
  onClick={[Function]}
>
  <i
    className="far fa-star"
  />
</button>
`;

exports[`VenueFavorite (favorite) should match snapshot 1`] = `
<button
  className="c-icon-button qa-toggle-favorite"
  onClick={[Function]}
>
  <i
    className="fas fa-star"
  />
</button>
`;
